--- a/Server/Api/package.json
+++ b/Server/Api/package.json
@@ -16,11 +16,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "winston": "^3.17.0"
   }
 }
