--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-simple-wysiwyg": "^3.4.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
