--- a/Server/Resume/package.json
+++ b/Server/Resume/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "amqplib": "^0.10.9",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
