Docker yml file setup move all backend into docker container

--- a/Server/Notification/Dockerfile
+++ b/Server/Notification/Dockerfile
@@ -20,4 +20,5 @@ RUN mkdir -p ./src/Logs
 EXPOSE 4003
 
 # START THE SERVICE
-CMD [ "node","server.js" ]
+# CMD [ "node","server.js" ]
+CMD ["npm","run","dev"]
