--- a/Server/Api/package.json
+++ b/Server/Api/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "node --watch server.js",
+     "dev": "nodemon --legacy-watch server.js",
     "start": "node server.js"
   },
   "dependencies": {
@@ -24,5 +24,8 @@
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
