--- a/Server/Auth/package.json
+++ b/Server/Auth/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "node --watch server.js",
+    "dev": "nodemon --legacy-watch server.js",
     "start": "node server.js"
   },
   "dependencies": {
@@ -24,5 +24,8 @@
     "rate-limit-redis": "^4.2.1",
     "rate-limiter-flexible": "^7.2.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
