--- a/Server/Notification/package.json
+++ b/Server/Notification/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "node --watch server.js",
+    "dev": "nodemon --legacy-watch server.js",
     "start": "node server.js"
   },
   "dependencies": {
@@ -22,5 +22,8 @@
     "express": "^5.1.0",
     "nodemailer": "^7.0.5",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
