--- a/Server/Profile/package.json
+++ b/Server/Profile/package.json
@@ -13,8 +13,8 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "amqplib": "^0.10.8",
@@ -27,5 +27,8 @@
     "rate-limit-redis": "^4.2.1",
     "rate-limiter-flexible": "^7.2.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
