--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.84.1",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
+    "jspdf": "^3.0.4",
     "lenis": "^1.3.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
