--- a/Client/package.json
+++ b/Client/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-simple-wysiwyg": "^3.4.1",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
