--- a/Server/Payment/package.json
+++ b/Server/Payment/package.json
@@ -24,6 +24,7 @@
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "pg": "^8.16.3",
+    "razorpay": "^2.9.6",
     "winston": "^3.19.0"
   },
   "devDependencies": {
