--- a/Server/Payment/package.json
+++ b/Server/Payment/package.json
@@ -19,6 +19,7 @@
     "migrate:push": "drizzle-kit push --config drizzle.config.ts"
   },
   "dependencies": {
+    "amqplib": "^0.10.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
@@ -28,6 +29,7 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.8",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.0",
